--- a/style.css
+++ b/style.css
@@ -20,6 +20,29 @@ body{
 .custom-color{
     color: #8a47f6;
 }
+.box-shadow{
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.1);
+}
+.active{
+    color: #8a47f6;
+    text-decoration: underline;
+}
+.image-grid{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 2px;
+}
+.image-grid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 5 columns */
+    gap: 10px;
+}
+.image-grid img {
+    width: 100%;
+    height: 100%; /* maintain aspect ratio */
+}
 ::-webkit-scrollbar{
     width: 5px;
     height: 5px;   
