--- a/style.css
+++ b/style.css
@@ -36,13 +36,15 @@ body{
 }
 .image-grid{
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* 5 columns */
+    grid-template-columns: repeat(5, 1fr);
+    
     gap: 10px;
 }
 .image-grid img {
     width: 100%;
-    height: 100%; /* maintain aspect ratio */
+    height: 80%;
 }
+
 ::-webkit-scrollbar{
     width: 5px;
     height: 5px;   
